<resources>
    <string name="app_name">movie application</string>
    <string name="tvId">Movie ID</string>
    <string name="tvTitle2">Movie Title</string>
    <string name="tvGenere2">Genre</string>
    <string name="tvYear2">Year</string>
    <string name="tvRating2">Rating</string>


    <string name="etTitle">Enter movie title here</string>
    <string name="etId">Enter movie Id here </string>
    <string name="etYear">Enter year of release here</string>


    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="btnShowList"> SHOW ALL PG-13 MOVIES</string>


    <string-array name="movie_rating">
        <item>G</item>
        <item>PG</item>
        <item>PG13</item>
        <item>NC16</item>
        <item>M18</item>
        <item>R21</item>
    </string-array>
</resources>