<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvTitle2" />

    <TextView
        android:id="@+id/tvGenere1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvGenere2" />

    <TextView
        android:id="@+id/tvYear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvYear2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/rating_pg13" />
</LinearLayout>